# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2094 2011/12/13 21:52:16 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta3 2011-12-??
 - 2011-12-13 Fixed bug#8020 - Queue list in new move window has the current queue enabled.
 - 2011-12-13 Fixed bug#8017 - After first AJAXUpdate call, MultiSelect DynamicFields gets empty.
 - 2011-12-13 Fixed bug#7999 - Uncheck all services for a customer doesn't work.
 - 2011-12-13 Fixed bug#7005 - JavaScript Init function is executed more than once in TicketZoom.
 - 2011-12-13 Fixed bug#7020 - Error in MySQL Syntax when CustomerID contains special characters.
 - 2011-12-12 Improved #7526 - Automatic TicketSearch for special characters (, ), &, - fails.
 - 2011-12-12 Fixed bug#8009 - Statistic overview does not show the statistic object name
    for static statistics.
 - 2011-12-12 Changed the default behaviour of TicketGet() and ArticleGet() to NOT return the
    dynamic field values for performance reasons. If you need them, pass DynamicFields => 1.
 - 2011-12-09 Fixed bug#7014 - Inline article gets bigger than Ticket::Frontend::HTMLArticleHeightMax.
 - 2011-12-09 Removed compatibility modules AgentTicketMailbox and CustomerZoom
    (these only performed redirects to newer screens).
 - 2011-12-09 Fixed bug#7997 - Fetching mail via AdminMailAccount does not work.
 - 2011-12-09 Fixed bug#7991 - Locale::Codes is not bundled in 3.1.0beta2 tarball, breaking Customer Cumpany
    screen.
 - 2011-12-09 Fixed bug#7995 - Previous owner is missing in AgentTicketMove.
 - 2011-12-09 Updated Japanese Translation, thanks to Kaoru Hayama!
 - 2011-12-08 A bug related to oracle made database updates necessary when upgrading from beta1 or beta2.
    Please see the UPGRADING file for details.