@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.491 2011/12/09 15:45:52 mg Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.492 2011/12/13 23:23:59 mb Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Translatable="1">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Group>Ticket</Group>
@@ -4020,14 +4020,72 @@ $QData{"Body"}
             </Hash>
         </Setting>
     </ConfigItem>
-    <ConfigItem Name="Frontend::CustomerUser::Item###9-OpenTickets" Required="0" Valid="1">
-        <Description Translatable="1">Customer item (icon) which shows the open tickets of this customer as info block.</Description>
+    <ConfigItem Name="Frontend::CustomerUser::Item###15-OpenTickets" Required="0" Valid="1">
+        <Description Translatable="1">Customer item (icon) which shows the open tickets of this customer as info block. Setting CustomerUserLogin to 1 searches for tickets based on login name rather than CustomerID.</Description>
         <Group>Ticket</Group>
         <SubGroup>Frontend::Customer</SubGroup>
             <Setting>
                 <Hash>
                     <Item Key="Module">Kernel::Output::HTML::CustomerUserGenericTicket</Item>
                     <Item Key="Attributes">StateType=Open;</Item>
+                    <Item Key="CustomerUserLogin">0</Item>
+                    <Item Key="CSS">Core.Agent.CustomerUser.OpenTicket.css</Item>
+                    <Item Key="CSSClassOpenTicket">OpenTicket</Item>
+                    <Item Key="CSSClassNoOpenTicket">NoOpenTicket</Item>
+                    <Item Key="Target">_blank</Item>
+                    <Item Key="Text">Open Tickets</Item>
+                    <Item Key="Action">AgentTicketSearch</Item>
+                    <Item Key="Subaction">Search</Item>
+                </Hash>
+            </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Frontend::CustomerUser::Item###16-OpenTicketsForCustomerUserLogin" Required="0" Valid="0">
+        <Description Translatable="1">Customer item (icon) which shows the open tickets of this customer as info block. Setting CustomerUserLogin to 1 searches for tickets based on login name rather than CustomerID.</Description>
+        <Group>Ticket</Group>
+        <SubGroup>Frontend::Customer</SubGroup>
+            <Setting>
+                <Hash>
+                    <Item Key="Module">Kernel::Output::HTML::CustomerUserGenericTicket</Item>
+                    <Item Key="Attributes">StateType=Open;</Item>
+                    <Item Key="CustomerUserLogin">1</Item>
+                    <Item Key="CSS">Core.Agent.CustomerUser.OpenTicket.css</Item>
+                    <Item Key="CSSClassOpenTicket">OpenTicket</Item>
+                    <Item Key="CSSClassNoOpenTicket">NoOpenTicket</Item>
+                    <Item Key="Target">_blank</Item>
+                    <Item Key="Text">Open Tickets</Item>
+                    <Item Key="Action">AgentTicketSearch</Item>
+                    <Item Key="Subaction">Search</Item>
+                </Hash>
+            </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Frontend::CustomerUser::Item###17-ClosedTickets" Required="0" Valid="0">
+        <Description Translatable="1">Customer item (icon) which shows the closed tickets of this customer as info block. Setting CustomerUserLogin to 1 searches for tickets based on login name rather than CustomerID.</Description>
+        <Group>Ticket</Group>
+        <SubGroup>Frontend::Customer</SubGroup>
+            <Setting>
+                <Hash>
+                    <Item Key="Module">Kernel::Output::HTML::CustomerUserGenericTicket</Item>
+                    <Item Key="Attributes">StateType=Closed;</Item>
+                    <Item Key="CustomerUserLogin">0</Item>
+                    <Item Key="CSS">Core.Agent.CustomerUser.OpenTicket.css</Item>
+                    <Item Key="CSSClassOpenTicket">OpenTicket</Item>
+                    <Item Key="CSSClassNoOpenTicket">NoOpenTicket</Item>
+                    <Item Key="Target">_blank</Item>
+                    <Item Key="Text">Open Tickets</Item>
+                    <Item Key="Action">AgentTicketSearch</Item>
+                    <Item Key="Subaction">Search</Item>
+                </Hash>
+            </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Frontend::CustomerUser::Item###18-ClosedTicketsForCustomerUserLogin" Required="0" Valid="0">
+        <Description Translatable="1">Customer item (icon) which shows the closed tickets of this customer as info block. Setting CustomerUserLogin to 1 searches for tickets based on login name rather than CustomerID.</Description>
+        <Group>Ticket</Group>
+        <SubGroup>Frontend::Customer</SubGroup>
+            <Setting>
+                <Hash>
+                    <Item Key="Module">Kernel::Output::HTML::CustomerUserGenericTicket</Item>
+                    <Item Key="Attributes">StateType=Closed;</Item>
+                    <Item Key="CustomerUserLogin">1</Item>
                     <Item Key="CSS">Core.Agent.CustomerUser.OpenTicket.css</Item>
                     <Item Key="CSSClassOpenTicket">OpenTicket</Item>
                     <Item Key="CSSClassNoOpenTicket">NoOpenTicket</Item>
