@@ -2,7 +2,7 @@
 # Kernel/Output/HTML/CustomerUserGenericTicket.pm
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerUserGenericTicket.pm,v 1.17 2011/12/12 16:23:14 jp Exp $
+# $Id: CustomerUserGenericTicket.pm,v 1.18 2011/12/13 23:23:59 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.17 $) [1];
+$VERSION = qw($Revision: 1.18 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -143,6 +143,12 @@ sub Run {
         else {
             $URL .= ';' . $Key . '=' . $Self->{LayoutObject}->LinkEncode( $TicketSearch{$Key} );
         }
+    }
+
+    if ( defined $Param{Config}->{CustomerUserLogin} && $Param{Config}->{CustomerUserLogin} ) {
+        $TicketSearch{CustomerUserLogin} = $Param{Data}->{UserLogin};
+        $URL .= ';CustomerUserLogin='
+            . $Self->{LayoutObject}->LinkEncode( $Param{Data}->{UserLogin} );
     }
 
     my $Count = $Self->{TicketObject}->TicketSearch(
