@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2094 2011/12/13 21:52:16 mb Exp $
+# $Id: CHANGES,v 1.2095 2011/12/13 23:23:59 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.1.0.beta3 2011-12-??
+ - 2011-12-13 Added feature bug#7893 - Customer Info in TicketZoom can now also list open tickets
+    based on CustomerUserLogin rather than CustomerID, and can list closed tickets as well.
  - 2011-12-13 Fixed bug#8020 - Queue list in new move window has the current queue enabled.
  - 2011-12-13 Fixed bug#8017 - After first AJAXUpdate call, MultiSelect DynamicFields gets empty.
  - 2011-12-13 Fixed bug#7999 - Uncheck all services for a customer doesn't work.
